some filter thing

--- a/Rapport/00setup/glossaries.tex
+++ b/Rapport/00setup/glossaries.tex
@@ -78,6 +78,7 @@
 \newacronym{DSP}{DSP}{Digital Signal Processor}
 \newacronym{FPGA}{FPGA}{Field Programmable Gate Array}
 \newacronym{AVC}{AVC}{Automatic volume control}
-
+\newacronym{IIR}{IIR}{Infinite impulse response}
+\newacronym{FIR}{FIR}{Finite impulse response}
 
 
