--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -99,7 +99,7 @@
 
 \part{Design \& implementation}
 
-\include{1Chapters/Gate/GateMAIN}
+\include{1Chapters/Filters/FiltersMAIN}
 
 \include{1Chapters/Equalizer/EqualizerMAIN}
 
