--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -25,6 +25,8 @@ The active loudspeaker has more flexibility than a passive loudspeaker because a
 \end{figure}
 The DALI Zensor 1 enables you to connect your audio source via cable or via Bluetooth and change volume and source directly on the speaker itself which makes it very flexible in its use. With this very general description a more detailed analysis of how an active loudspeaker is build and since the distortion is mainly created in the amplifier and woofer the analysis will be focused here on.
 
+\input{1Chapters/1Preanalysis/signal_processor.tex}
+
 \input{1Chapters/1Preanalysis/Amplifier.tex}
 
 \input{1Chapters/1Preanalysis/Speaker.tex}
