--- a/Rapport/1Chapters/1Preanalysis/Amplifier.tex
+++ b/Rapport/1Chapters/1Preanalysis/Amplifier.tex
@@ -1,4 +1,4 @@
-\section{Amplifier topology}
+\section{Amplifier}
 This section will briefly describe the amplifier in a active loudspeaker and analyse how distortion is created in the amplifier.
 
 The amplifier is the module which amplifies the input signal. There are several different classes of amplifiers for example class A, AB and D, these classes have different characteristics which gives them different advantages and disadvantages. Two main parameters for the performance of an amplifier are distortion and efficiency. There are several sources for the distortion in a amplifier, such as non-linearity in the active components, crossover distortion and audio clipping. Since no active components are ideal, all active components will create some distortion whenever a signal is passed through the components. An option for better performance is to increase the open-loop amplification of the amplifier as this will give more signal to feedback over thus decreasing the distortion from the components. Since the extend of this project will not deal with circuit design of an amplifier, crossover and non-linearity in component will not be further investigated.
