--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -2,7 +2,7 @@
 \input{1Chapters/1Preanalysis/Introduction.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%% Problem analyse %%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{The Active Loudspeaker and its Limitations}
+\chapter{Active Loudspeakers and their Limitations}
 %Before developing a system which can improve the overall performance of an active loudspeaker a brief analysis on how an active loudspeaker functions, is needed. 
 The main topic of this chapter is to briefly explain the design of a simplified active loudspeaker and afterwards examine where the issues, concerning distortion in an active loudspeaker, arise. As distortion adds artefacts to the audio, distortion is often undesirable in an active loudspeaker. 
 
