--- a/Rapport/1Chapters/1Preanalysis/Speaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/Speaker.tex
@@ -1,4 +1,4 @@
-\section{Loudspeaker topology}
+\section{Loudspeaker}
 
 As previously stated, distortion also occurs in the woofer block in \autoref{fig:speaker_block}. In order to understand how the distortion occurs in a loudspeaker, it is necessary to understand the basic fundamentals and the topology of a loudspeaker. This section will consist of the basic topology and then glans over the topic of vibration induced in the speaker woofer.
 
