new updates to pre

--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -34,7 +34,7 @@ The DALI Zensor 5 AX allows connection of the audio source via cable or via Blue
 
 \input{1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex}
 
-\input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
+%\input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
 
 %\input{1Chapters/1Preanalysis/frequency_response.tex}
 
@@ -47,7 +47,7 @@ The analysis so far has mainly concerned how the performance of a loudspeaker is
 
 \begin{center}
 \label{ProblemStatement}
-\textit{How can a real-time signal processing system in an active speaker limit the amount of distortion and prevent the coil from hitting the back plate of the woofer?"}
+\textit{How can a signal processing system in an active speaker prevent the coil from hitting the back plate of the woofer and reduce distortion compared to peak limitation?"}
 \end{center}
 Besides the problem stated above, DALI desires to have incorporated a user controlled equalizer for the commercial user so it will be able to function more optimal in different room sizes. Further more it should be fully customizable for ongoing adjustments during the development period.\todo{Tilføj kilde til mail fra DALI}
 
