--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -1,5 +1,5 @@
 \chapter{Overview} \label{ch:overview}
-This chapter will describe an overview of the system before the needed requirements of the system is set up. Recall overview of system the from \ref{sec:feedback}. This block diagram is know futher extended to the block diagram seen in \autoref{fig:SystemOverview}.
+This chapter will describe an overview of the system before the needed requirements of the system is set up. Recall overview of system the from \autoref{sec:feedback}. This block diagram is know futher extended to the block diagram seen in \autoref{fig:SystemOverview}, based on the conclusions from \autoref{sec:PreAnalysisCon}.
 
 \begin{figure}[H]
 \centering
@@ -9,58 +9,79 @@ This chapter will describe an overview of the system before the needed requireme
 \caption{Block overview of the entire system. Black boxes are not static non changeable variable. Grey boxes are also static but has to be taken into account.}
 \label{fig:SystemOverview}
 \end{figure}
-
-The concept is still a feedforward system that analyses the audio before output.
-
- which shows a feedforward system which will equalize of the audio based on the \textbf{TBD} model, seen on \textbf{figure TBD}, comparing the second and third harmonic relative to keynote. Besides the feed forward system a user controlled equalizer should also be part of the system to give the user more flexibility. The following chapter describes the individual blocks in more detail.          
-
-
-A more detailed description of every block will now follow in the preceding section.
+%This shows a feedforward system which will equalize of the audio based on the \textbf{TBD} model, seen on \textbf{figure TBD}, comparing the second and third harmonic relative to keynote. Besides the feed forward system a user controlled equalizer should also be part of the system to give the user more flexibility. The following chapter describes the individual blocks in more detail.          
+This shows a feedforward system with a user controlled five band graphich equalizer, controlled with the GUI, with the following band frequencies:
+\begin{table}[H]
+\centering
+\begin{tabular}{|
+>{\columncolor[HTML]{C0C0C0}}l |c|c|c|}
+\hline
+& \cellcolor[HTML]{C0C0C0}f1 {[}Hz{]} & \cellcolor[HTML]{C0C0C0}fc {[}Hz{]} & \cellcolor[HTML]{C0C0C0}f2 {[}Hz{]} \\ \hline
+Band 5 & 530,3                               & -                                   & -                                   \\ \hline
+Band 4 & 265,2                               & 375                                 & 530,3                               \\ \hline
+Band 3 & 132,6                               & 187,5                               & 265,2                               \\ \hline
+Band 2 & 66,29                               & 93,75                               & 132,6                               \\ \hline
+Band 1 & 33,15                               & 46,87                               & 66,29                               \\ \hline
+\end{tabular}
+\caption{Frequencies for bands}
+\label{tb:freqBands}
+\end{table}
+Besides the user controlled equalizer a four band RMS compressor (band 1-4) will monitor the RMS levels of the four bands and gain accordingly to a future determined threshold. The divided signal is then summed up to a single signal and outputtet. This should result in a protective system which makes sure that the loudspeaker never breaks because of the coil hits the backplate. A more detailed description of every block will now follow in the preceding section.
 
 \textbf{Audio source} \\
-The audio source in this system will be based on the IEC 60268-15 specification. Meaning that it will in be limited to a analogue signal with a maximum peak voltage of 2 Volt RMS but otherwise nominal 0.5 Volt RMS. This input will handled by an onboard TLV320AIC3204 codec located on the eZdsp development board.
+The audio source in this system will be based on the IEC 60268-15 specification. Meaning that it will in be limited to a analogue signal with a maximum peak voltage of 2 Volt RMS but otherwise nominal 0.5 Volt RMS. %This input will handled by an onboard TLV320AIC3204 codec located on the eZdsp development board.
 
 \textbf{User} \\
-The system will be able to be partially controlled by the end user. The user will be able to affect the entire system with the desired preference. The preference will be restricted to gain in the lower frequency as wished by DALI.
-\todo[inline]{Reference til Samtale med DALI}
+%The system will be able to be partially controlled by the end user. The user will be able to affect the entire system with the desired preference. The preference will be restricted to gain in the lower frequency as wished by DALI.
+The user will be able to control the graphic equalizer via the GUI 
+%\todo[inline]{Reference til Samtale med DALI}
 
-\textbf{User interface}\\
-The user interface will be based on physical hardware. The hardware will be simple of construction. The user will be browsing through the different preset using a push down button. The different preset will be displayed on the on board LCD display.
+\textbf{Graphic user interface}\\
+%The GUI will be based on physical hardware. The hardware will be simple of construction. The user will be browsing through the different preset using a push down button. The different preset will be displayed on the on board LCD display.
+The GUI is based on the (\textbf{GUI SECTION}) and the user will be able to control the gain in the systems five bands.
 
-\textbf{Effect controller} \\
-The effect controller will be consisting of a graphical user interface in which the developer can adjust the entire frequency response according to the wanted output. The effect controller is thought as a fast prototyping function in which the developer can adjust on the fly when tuning the speaker system.
+\textbf{Graphic equalizer}\\
+The five band graphic equalizer will be user controlled from the GUI. The reasoning behind implementing a five band graphic equalizer also mentioned in \autoref{sec:PreAnalysisCon}, is that the graphic equalizer is easily implemented into the system because of the four band RMS compressor. To implement the equalizer the only thing needed is to implement a variable gain block before the RMS compressor. The graphic equalizer is explained in detail in (\textbf{graphic equalizer SECTION}) 
 
-\textbf{Developer} \\
-The developer is DALI or the specific engineer who wishes to tune and adjust the product.
+\textbf{RMS compressor}\\
+The four band RMS compressor is based on a RMS detector block in each band which will detect the RMS level of a future determined time window and from the RMS level gain by a variable margin based on a future determined threshold. The RMS compressor is explained in detail in (\textbf{RMS SECTION})  
 
-\textbf{User Equalizer} \\
-The user equalizers job is to compensate for any needed or unwanted adjustment in the system. This equalizer will only be changing whenever the user wants it or during the design period. The equalizer will consist of 4 Bi-quad bands an a high/low shelf which is to be spread equally across a frequency spectrum of 20 Hz trough 20 kHz.
+This leads to the requirement specification. 
 
-\textbf{Delay} \\
-The delay is created in order to give the monitoring system time for analysis. The delay will be adjusted accordingly to the analysis time needed in the feed forward system.
+%\textbf{Effect controller} \\
+%The effect controller will be consisting of a graphical user interface in which the developer can adjust the entire frequency response according to the wanted output. The effect controller is thought as a fast prototyping function in which the developer can adjust on the fly when tuning the speaker system.
 
+%\textbf{Developer} \\
+%The developer is DALI or the specific engineer who wishes to tune and adjust the product.
 
-\textbf{Peak Detection} \\
-The Peak detection block will be consisting of a signal analysis and estimation of the incoming signal. The system will be checking all amplitudes of the signal in order to determine whether a signal is to large and it should be adjusted for. The samples will be measured and compared with a predetermined threshold to determine if further action should be done.
+% \textbf{User Equalizer} \\
+% The user equalizers job is to compensate for any needed or unwanted adjustment in the system. This equalizer will only be changing whenever the user wants it or during the design period. The equalizer will consist of 4 Bi-quad bands an a high/low shelf which is to be spread equally across a frequency spectrum of 20 Hz trough 20 kHz.
 
-\textbf{Spectrum Analysis} \\
-When the signal has been analysed for potential amplitude spikes further analysis is done to estimate at what frequency these spikes occur. A spectral estimation will locate at what frequency the high amplitude is happening.  
-
-
-\textbf{Decision} \\
-When the spectrum analysis shows fluctuations above a certain threshold it should determine what attenuation is needed and send information to the Auto equalizer to adjust accordingly. The decision block will be weighting all of the signal accordingly with a model for the speaker. The model should weight the problematic frequencies higher than the less problematic frequencies. A problematic is defined as a frequency which would create to large an excursion of the diaphragm. 
-
+% \textbf{Delay} \\
+% The delay is created in order to give the monitoring system time for analysis. The delay will be adjusted accordingly to the analysis time needed in the feed forward system.
 
 
-\textbf{Equalizer} \\
-This equalizer will receive filter constants released/updated by the Decision and Model block. If there is no need of adjustment it will simply adjust by a gain of 1 in the entire spectrum. The equalizer will be consisting of a parametric equalizer which will then adjust according to the information given by the decision block.
+% \textbf{Peak Detection} \\
+% The Peak detection block will be consisting of a signal analysis and estimation of the incoming signal. The system will be checking all amplitudes of the signal in order to determine whether a signal is to large and it should be adjusted for. The samples will be measured and compared with a predetermined threshold to determine if further action should be done.
 
-\textbf{Limiter} \\
-The limiter is greyed out and will not be discussed further on. It is noted that there should be room in the code for implementation of a multi band limiter wished by DALI.
-
-\textbf{Amplification stage and Speaker driver} \\
-The speaker is in this project seen as a black box which will not be tampered with. The black box will function as an actuator which is to be controlled by the DSP system. How ever it is assumed that the DSP system will prolong the life of the speaker driver when pushed to its limits.
+% \textbf{Spectrum Analysis} \\
+% When the signal has been analysed for potential amplitude spikes further analysis is done to estimate at what frequency these spikes occur. A spectral estimation will locate at what frequency the high amplitude is happening.  
 
 
-\vspace{5mm}
-The overall system has now been described in detail. The different functions placed in the boxes have been outlined and it is now possible to determine more specific requirements for the system.
+% \textbf{Decision} \\
+% When the spectrum analysis shows fluctuations above a certain threshold it should determine what attenuation is needed and send information to the Auto equalizer to adjust accordingly. The decision block will be weighting all of the signal accordingly with a model for the speaker. The model should weight the problematic frequencies higher than the less problematic frequencies. A problematic is defined as a frequency which would create to large an excursion of the diaphragm. 
+
+
+
+% \textbf{Equalizer} \\
+% This equalizer will receive filter constants released/updated by the Decision and Model block. If there is no need of adjustment it will simply adjust by a gain of 1 in the entire spectrum. The equalizer will be consisting of a parametric equalizer which will then adjust according to the information given by the decision block.
+
+% \textbf{Limiter} \\
+% The limiter is greyed out and will not be discussed further on. It is noted that there should be room in the code for implementation of a multi band limiter wished by DALI.
+
+% \textbf{Amplification stage and Speaker driver} \\
+% The speaker is in this project seen as a black box which will not be tampered with. The black box will function as an actuator which is to be controlled by the DSP system. How ever it is assumed that the DSP system will prolong the life of the speaker driver when pushed to its limits.
+
+
+% \vspace{5mm}
+% The overall system has now been described in detail. The different functions placed in the boxes have been outlined and it is now possible to determine more specific requirements for the system.
