Nyt overview billede

--- a/Rapport/00setup/Tikz.tex
+++ b/Rapport/00setup/Tikz.tex
@@ -40,3 +40,5 @@
 \tikzstyle{Sysbox} = [draw,rounded corners, minimum height=15mm, minimum width=9em, align=center, text centered,text width = 10.5em]
 \tikzstyle{SysBlackBox} = [draw, fill=black, text=white, rounded corners, minimum height=15mm, minimum width=9em, align=center, text centered,text width = 10em]
 \tikzstyle{PreAmpBox} = [rectangle,draw, fill=black!20, minimum height=8mm, minimum width=12mm]
+\tikzstyle{gain} = [fill=white, draw, rectangle, minimum height=2.5em, minimum width=2.5em]
+\tikzstyle{summation} = [draw, minimum size=0.75cm, circle, node distance=1.75cm]
