--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -5,7 +5,7 @@ This chapter will describe an overview of the system before the needed requireme
 \centering
 \tikzsetnextfilename{SystemOverview}
 \scalebox{0.8}{
-\input{figures/SystemOverview.tex}}
+\input{figures/MainSystemOverview.tex}}
 \caption{Block overview of the entire system. Black boxes are not static non changeable variable. Grey boxes are also static but has to be taken into account.}
 \label{fig:SystemOverview}
 \end{figure}
