--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -24,6 +24,40 @@ At this point it is yet to be determined if the system will be based on a feedba
 The design concept consist of a signal processing block, which will be analysed to understand which solution is best for the problem stated, a signal analysis block which will not be analysed further in this chapter, a user interface which will be analysed to determine how the user interface should be designed and lastly the processor block which will be analysed to determine which type of processor that should be used. 
 
 
+\subsection{Distortion from vibration and impulses}\label{subsec:impulses}
+
+A common problem when designing loudspeakers are the vibrations from the enclosure. If the vibrations are strong, they will become audible and distort the overall sound. The sound radiation from the enclosure will become greater when the \gls{SPL} from the speaker increase. This problem is solved with different techniques but yield more or less the same outcome, which is stiffening of the enclosure. Some of the techniques for removing vibrations from the enclosure could be:
+\begin{itemize}
+\item Mechanical decoupling of the drivers from the enclosure.
+\item Denser or heavier construction material with a high natural frequency, making it harder for the enclosure to start vibrating.
+\item Dampening material or complex structural design inside the cabinet to disperse the sound.
+\end{itemize}
+\todo[inline]{Skal nok lige skaffe nogle kilder på de udtagelser}
+
+Another possibility is to use the vibration measurement as an indicator to tell the current performance of the loudspeaker. Since the loudspeaker will vibrate more at higher volumes. 
+
+
+Looking further into the woofer itself, it shows in \autoref{fig:SpeakerModelStress} that parts in the woofer also creates unwanted vibrations. The purpose of the woofer is to reproduce the electrical signal as an acoustical signal. This is done by using a diaphragm which is suspended in a very light and easy to move material. An Induction in the coil is created in a permanent magnet creating a a electro magnetic force resulting in the diaphragm moving. The goal will always be to loose as little as possible energy, giving the most perfect output. The woofer simply needs to be as powerful, light, stiff and efficient as possible.
+
+\begin{figure}[H]
+\centering
+\begin{subfigure}[t]{0.47\textwidth}
+\includegraphics[width=\linewidth]{SpeakerGOOD}
+	\caption{Regular speaker driver showing surround, diaphragm and the magnet.}
+	\label{fig:regularspeaker}
+\end{subfigure}
+\hspace{6mm} 
+\begin{subfigure}[t]{0.47\textwidth}
+\includegraphics[width=\linewidth]{SpeakerBAD}
+	\caption{Regular speaker driver with red markings showing stress areas}
+	\label{fig:badspeaker}
+\end{subfigure}
+\caption{A Speaker driver, where \ref{fig:badspeaker} shows the stress points outlined with red.}
+\label{fig:SpeakerModelStress}
+\end{figure}
+%When this signal has a large amplitude, read overload, the diaphragm reaches physical capacity. 
+In \autoref{fig:badspeaker} it shows that when a diaphragm is pushed to its maximum capacity the surround will affect the diaphragm causing unwanted distortion. This will be one of the major problems if the diaphragm is not sufficiently stiff to withstand the high \gls{SPL} and not twist during playback. 
+
 
 
 
