--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -32,7 +32,7 @@ The DALI Zensor 5 AX allows connection of the audio source via cable or via Blue
 
 \input{1Chapters/1Preanalysis/Speaker.tex}
 
-\input{1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex}
+%\input{1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex}
 
 %\input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
 
@@ -43,7 +43,27 @@ The DALI Zensor 5 AX allows connection of the audio source via cable or via Blue
 %\input{1Chapters/1Preanalysis/hit_detection.tex}
 
 \section{Problem Statement} \label{sec:problem_statement}
+
 The analysis so far has mainly concerned how the performance of a loudspeaker is influenced when increasing the volume of the audio signal. Based on previous analysis a processing system will be developed in the pre-amplifier stage. Following problem statement is thus formulated as:
+
+
+This chapter has analyzed an active speaker and its components to investigate how distortion is created throughout the active loudspeaker. The conclusion is that the following situations create distortion.
+\begin{itemize}
+\item Amplifier
+	\begin{itemize}
+	\item Clipping.
+	\end{itemize}
+\item Loudspeaker
+	\begin{itemize}
+	\item Vibrations from enclosure.
+	\item Overexcursion (physical clipping).
+	\item Coil hitting the back plate.
+	\end{itemize}
+\end{itemize}
+Of these situations the focus moving forward will only be concerning the distortion situations from the loudspeaker because clipping in the amplifier is easy to solve, because the parameters in the amplifier is constant and the signal is easily limited to create less distortion than by hard clipping. The next chapter will therefore explain and analyze performance tests of a loudspeaker to see if any of the above loudspeaker situations can be detected using test signals and not music. 
+
+
+
 
 \begin{center}
 \label{ProblemStatement}
