--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -44,25 +44,14 @@ The DALI Zensor 5 AX allows connection of the audio source via cable or via Blue
 
 \section{Problem Statement} \label{sec:problem_statement}
 
-The analysis so far has mainly concerned how the performance of a loudspeaker is influenced when increasing the volume of the audio signal. Based on previous analysis a processing system will be developed in the pre-amplifier stage. Following problem statement is thus formulated as:
-
-
-This chapter has analyzed an active speaker and its components to investigate how distortion is created throughout the active loudspeaker. The conclusion is that the following situations create distortion.
+The analysis so far has mainly concerned distortion and non-linearities in an active loudspeaker. It can be concluded that most of the non-linearities are created at high sound pressure levels. The non-linearities may be created in following situations:
 \begin{itemize}
-\item Amplifier
-	\begin{itemize}
-	\item Clipping.
-	\end{itemize}
-\item Loudspeaker
-	\begin{itemize}
-	\item Vibrations from enclosure.
-	\item Overexcursion (physical clipping).
-	\item Coil hitting the back plate.
-	\end{itemize}
+\item Clipping from either hard peak-limiting or amplifier.
+\item Over excursion (physical clipping).
+\item Coil hitting the back plate.
 \end{itemize}
-Of these situations the focus moving forward will only be concerning the distortion situations from the loudspeaker because clipping in the amplifier is easy to solve, because the parameters in the amplifier is constant and the signal is easily limited to create less distortion than by hard clipping. The next chapter will therefore explain and analyze performance tests of a loudspeaker to see if any of the above loudspeaker situations can be detected using test signals and not music. 
 
-
+The system to be designed should therefore reduce the amount of distortion, and protect the active loudspeaker with main focus on each of parameters on the list. Following problem statement is thus formulated:
 
 
 \begin{center}
