--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -94,6 +94,13 @@
 
 \part{Concept}
 
+
+\include{1Chapters/2Concept/OverallSystemDesign}
+
+\include{1Chapters/2Concept/SignalProcessingTool}
+
+
+
 \include{1Chapters/2Requirements/RequirementsMAIN}
 
 \include{1Chapters/3SystemOverview/SystemOverviewMAIN}
@@ -133,7 +140,7 @@
  \titleformat{\section}[hang]{\Large\bfseries}{\thesection\hsp\textcolor{black}{|}\hsp}{0pt}{\Large\bfseries}
 
 % \renewcommand{\thesection}{\Alph{section}}
-% \setcounter{section}{0}
+ \setcounter{section}{0}
  \part{Appendix}
  \appendix
 % \addcontentsline{toc}{chapter}{Appendix}
